[gd_scene load_steps=2 format=3 uid="uid://elyybisvk6lf"]

[ext_resource type="Script" path="res://addons/dialouging/scenes/choice_dialouge.gd" id="1_bkb5h"]

[node name="ChoiceDialouge" type="GraphNode"]
offset_right = 9.0
offset_bottom = 55.0
resizable = true
title = "Choice"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_bkb5h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CharacterName" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Tip" type="Label" parent="VBoxContainer/CharacterName"]
layout_mode = 2
text = "Character name: "

[node name="Edit" type="LineEdit" parent="VBoxContainer/CharacterName"]
layout_mode = 2
expand_to_text_length = true

[node name="ChoiceCount" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Tip" type="Label" parent="VBoxContainer/ChoiceCount"]
layout_mode = 2
text = "Choice count: "

[node name="Edit" type="LineEdit" parent="VBoxContainer/ChoiceCount"]
layout_mode = 2
expand_to_text_length = true

[node name="ChoicesTip" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Choices: "

[connection signal="delete_request" from="." to="." method="_on_delete_request"]
[connection signal="text_changed" from="VBoxContainer/CharacterName/Edit" to="." method="_on_charater_name_edit_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/ChoiceCount/Edit" to="." method="_on_choice_count_edit_text_changed"]
